tests/fixtures/errors/UNWRAPPED_MULTIWORD_LITERAL__B.tsl
DROP stick 2
 ON Twitch Chat Message
 WITH message CONTAINS hello there friend
